2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): Do not use pk-term.
	(pk_print_version): Likewise.
	(parse_args_2): Likewise.
	(pk_fatal): Likewise.
	(parse_args_1): Handle HELP_ARG and VERSION_ARG here.
	(parse_args_2): ... instead of here.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk: Do not capitalize summary in help entry.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.

2022-02-14  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Integer Attributes): Update accordingly.
	(Offset Attributes): Likewise.

	* libpoke/pkl-typify.c (pkl_typify1_ps_attr): Allow using 'length
	in any kind of value.
	* testsuite/poke.pkl/attr-length-12.pk: New test.
	* testsuite/poke.pkl/attr-length-13.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2022-02-09  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.c (pk_open_proc_maps): Use PRIx64 instead of %lx.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Use PRIu64
	isntead of %lu.

2022-02-08  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.libpoke/term-if.h (pk_term_end_class): Return 1.

2022-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.1.
	* NEWS: Likewise.
	* doc/gendocs_template: Likewise.

2022-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Bump version to 2.0.92.
	* NEWS: Update.

2022-02-06  Bruno Haible  <bruno@clisp.org>
	    Jose E. Marchesi  <jemarch@gnu.org>

	Avoid undefined behaviour on signed integer.
	* libpoke/pvm-val.h (PVM_MAKE_INT): Cast to unsigned integer before
	shifting.
	* libpoke/pvm.jitter (PVM_NEG_SIGNED): Likewise.
	(PVM_DIV_SIGNED): Likewise.
	(PVM_MOD_SIGNED): Likewise.
	* libpoke/pkl-fold.c (OP_UNARY_II): Likewise.
	(OP_BINARY_III): Likewise.


	(pk_cmd_proc): Likewise.

2022-02-05  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_type_is_complete): Fix assertion.
